# 2D_Stationary_Portal

./: CMakeLists.txt  README.md
ResourceManager/include/: ResourceManager.h
ResourceManager/src/: ResourceManager.cpp
include/: Game.h
src/: Game.cpp  main.cpp
